# PyMisc

./: .replit  4520a4p1q3.py  arst.py  battleship.py  ccroguestagsort.py  ignoresearchterm.py  pyproject.toml  rogueships.py  run.py  scrapeelection.py  title.py  today.py  tour.py  tournament2.py
ffxiv doodles/: craftinglist.py  huntmacrogenerator.py  itemlist.txt
